--- a/product_category_temp.ipynb
+++ b/product_category_temp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "(59185, 22)"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "((56557, 22), (2628, 22))"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "59185"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -106,6 +106,39 @@
     "temp_df['title'] = temp_df['title'].str.rstrip()\n",
     "temp_df.drop_duplicates(subset=['title'], inplace=True)\n",
     "temp_df = temp_df[['title', 'PRODUCT TYPE']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_12928\\1485600810.py:1: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  temp_df.applymap(list)['title'].apply(pd.Series).stack().unique()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['L', 'e', 'a', 't', 'h', 'r', ' ', 'J', 'c', 'k', 'B', 'l', '/',\n",
+       "       'n', 'i', ':', 'u', 'o', 'w', 'p', '0', '1', '8', '4', 'd', 'y',\n",
+       "       'M', 'C', 'g', 'I', 'f', 'q', 'G', 'D', 'F', 'H', 'S', 's', '-',\n",
+       "       'A', 'T', 'b', 'v', '2', '7', 'E', 'x', '9', 'Q', 'W', '5', 'm',\n",
+       "       '3', '6', 'V', '&', 'Z', ',', 'N', 'P', 'R', '.', 'O', 'K', 'X',\n",
+       "       'j', 'U', 'z', 'Y', \"'\", '–', ';', '\\xa0', '’'], dtype=object)"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_df.applymap(list)['title'].apply(pd.Series).stack().unique()"
    ]
   },
   {
