--- a/product_category_temp.ipynb
+++ b/product_category_temp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:14: SyntaxWarning: invalid escape sequence '\\('\n",
+      "<>:14: SyntaxWarning: invalid escape sequence '\\('\n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_9244\\3309598788.py:14: SyntaxWarning: invalid escape sequence '\\('\n",
+      "  temp_stock_df = temp_df['title'].str.split('\\(|\\)', expand=True).iloc[:,[0,1]]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(59185, 22)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1 = pd.read_csv('2024_feb_unduplicated_orders.csv')\n",
+    "df1['title'] = df1['title'].str.lstrip()\n",
+    "df1['title'] = df1['title'].str.rstrip()\n",
+    "print(df1.shape)\n",
+    "\n",
+    "temp_df = pd.read_csv('product_feed.csv')\n",
+    "temp_df['PRODUCT TYPE'] = temp_df['PRODUCT TYPE'].str.replace('&gt;', '>')\n",
+    "temp_df['PRODUCT TYPE'] = temp_df['PRODUCT TYPE'].str.replace('&amp;', '&')\n",
+    "temp_df['PRODUCT TYPE'] = temp_df['PRODUCT TYPE'].str.replace('&#039;', \"'\")\n",
+    "temp_df['TITLE'] = temp_df['TITLE'].str.replace('&gt;', '>')\n",
+    "temp_df['TITLE'] = temp_df['TITLE'].str.replace('&amp;', '&')\n",
+    "temp_df['TITLE'] = temp_df['TITLE'].str.replace('&#039;', \"'\")\n",
+    "temp_df.rename(columns={'TITLE': 'title'}, inplace=True)\n",
+    "temp_stock_df = temp_df['title'].str.split('\\(|\\)', expand=True).iloc[:,[0,1]]\n",
+    "temp_df['title'] = temp_stock_df[0]\n",
+    "temp_df['title'] = temp_df['title'].str.lstrip()\n",
+    "temp_df['title'] = temp_df['title'].str.rstrip()\n",
+    "temp_df.drop_duplicates(subset=['title'], inplace=True)\n",
+    "temp_df = temp_df[['title', 'PRODUCT TYPE']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1['customs_description_old'] = df1['customs_description']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(59185, 23)"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = df1.merge(temp_df, on='title', how='left')\n",
+    "df1['customs_description'] = df1['PRODUCT TYPE']\n",
+    "df1.drop(['PRODUCT TYPE'], axis=1, inplace=True)\n",
+    "df1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15438\n",
+      "1308\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df1['customs_description'].isnull().sum())\n",
+    "df1['customs_description'] = df1['customs_description'].fillna(df1['customs_description_old'])\n",
+    "df1.drop(['customs_description_old'], axis=1, inplace=True)\n",
+    "print(df1['customs_description'].isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "customs_description\n",
+       "Mens > Leather Jackets > Biker Styles      4241\n",
+       "Ladies > Leather Jackets > Biker Styles    3622\n",
+       "Ladies > Handbags                          2960\n",
+       "January Sale 2021                          2786\n",
+       "Ladies > Deals for HER > Handbags          2685\n",
+       "                                           ... \n",
+       "Sheepskin & Fur > Ladies Fur Coats            3\n",
+       "Handbags > Saddle Bag                         2\n",
+       "Ladies                                        2\n",
+       "Valentine's Day 2023                          1\n",
+       "Laptop Messenger Bags                         1\n",
+       "Name: count, Length: 134, dtype: int64"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['customs_description'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1['customs_description'] = df1['customs_description'].replace(np.NaN, 'No assigned cateogry')\n",
+    "print(df1['customs_description'].isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df1['customs_description'].str.split(' > ', expand=True)\n",
+    "df1.drop(['Category', 'F_Cat', 'S_Cat', 'T_Cat'], axis=1, inplace=True)\n",
+    "df2.columns = ['F_Cat', 'S_Cat', 'T_Cat']\n",
+    "df1 = df1.join(df2)\n",
+    "df1['Category'] = df1['F_Cat'] + ' > ' + df1['S_Cat']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.to_csv('2024_feb_unduplicated_orders fixed_categories.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +212,7 @@
        "(59185, 22)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +235,7 @@
        "((56557, 22), (2628, 22), 2628)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +257,7 @@
        "59185"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -110,117 +301,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_9244\\1485600810.py:1: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  temp_df.applymap(list)['title'].apply(pd.Series).stack().unique()\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array(['L', 'e', 'a', 't', 'h', 'r', ' ', 'J', 'c', 'k', 'B', 'l', '/',\n",
-       "       'n', 'i', ':', 'u', 'o', 'w', 'p', '0', '1', '8', '4', 'd', 'y',\n",
-       "       'M', 'C', 'g', 'I', 'f', 'q', 'G', 'D', 'F', 'H', 'S', 's', '-',\n",
-       "       'A', 'T', 'b', 'v', '2', '7', 'E', 'x', '9', 'Q', 'W', '5', 'm',\n",
-       "       '3', '6', 'V', '&', 'Z', ',', 'N', 'P', 'R', '.', 'O', 'K', 'X',\n",
-       "       'j', 'U', 'z', 'Y', \"'\", '–', ';', '\\xa0', '’'], dtype=object)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "temp_df.applymap(list)['title'].apply(pd.Series).stack().unique()"
+    "# temp_df.applymap(list)['title'].apply(pd.Series).stack().unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>PRODUCT TYPE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>9091</th>\n",
-       "      <td>Women's Collarless Leather Fashion Jacket Blac...</td>\n",
-       "      <td>Ladies &gt; Leather Jackets &gt; Casual Styles</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                  title  \\\n",
-       "9091  Women's Collarless Leather Fashion Jacket Blac...   \n",
-       "\n",
-       "                                  PRODUCT TYPE  \n",
-       "9091  Ladies > Leather Jackets > Casual Styles  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp_df[temp_df['title'] == \"Women's Collarless Leather Fashion Jacket Black: AWL-284\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp_df['title'].str.contains(\"Women's Collarless Leather Fashion Jacket Black: AWL-284\").any()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +319,7 @@
        "(2628, 22)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +342,7 @@
        "(59185, 22)"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,12 +368,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1308\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df1['customs_description'].isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "df1.to_csv('2024_feb_unduplicated_orders fixed_categories.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
