--- a/product_category_temp.ipynb
+++ b/product_category_temp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,24 +12,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<>:14: SyntaxWarning: invalid escape sequence '\\('\n",
-      "<>:14: SyntaxWarning: invalid escape sequence '\\('\n",
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_9244\\3309598788.py:14: SyntaxWarning: invalid escape sequence '\\('\n",
-      "  temp_stock_df = temp_df['title'].str.split('\\(|\\)', expand=True).iloc[:,[0,1]]\n"
+      "<>:16: SyntaxWarning: invalid escape sequence '\\('\n",
+      "<>:16: SyntaxWarning: invalid escape sequence '\\('\n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_2860\\2291121936.py:16: SyntaxWarning: invalid escape sequence '\\('\n",
+      "  temp_stock_df = temp_df['title_cat'].str.split('\\(Size:', expand=True)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(59185, 22)\n"
+      "(59185, 23)\n"
      ]
     }
    ],
@@ -37,6 +37,7 @@
     "df1 = pd.read_csv('2024_feb_unduplicated_orders.csv')\n",
     "df1['title'] = df1['title'].str.lstrip()\n",
     "df1['title'] = df1['title'].str.rstrip()\n",
+    "df1['title_lower'] = df1['title'].str.lower()\n",
     "print(df1.shape)\n",
     "\n",
     "temp_df = pd.read_csv('product_feed.csv')\n",
@@ -46,18 +47,20 @@
     "temp_df['TITLE'] = temp_df['TITLE'].str.replace('&gt;', '>')\n",
     "temp_df['TITLE'] = temp_df['TITLE'].str.replace('&amp;', '&')\n",
     "temp_df['TITLE'] = temp_df['TITLE'].str.replace('&#039;', \"'\")\n",
-    "temp_df.rename(columns={'TITLE': 'title'}, inplace=True)\n",
-    "temp_stock_df = temp_df['title'].str.split('\\(|\\)', expand=True).iloc[:,[0,1]]\n",
-    "temp_df['title'] = temp_stock_df[0]\n",
-    "temp_df['title'] = temp_df['title'].str.lstrip()\n",
-    "temp_df['title'] = temp_df['title'].str.rstrip()\n",
-    "temp_df.drop_duplicates(subset=['title'], inplace=True)\n",
-    "temp_df = temp_df[['title', 'PRODUCT TYPE']]"
+    "temp_df.rename(columns={'TITLE': 'title_cat'}, inplace=True)\n",
+    "# temp_stock_df = temp_df['title_cat'].str.split('\\(|\\)', expand=True).iloc[:,[0,1]]\n",
+    "temp_stock_df = temp_df['title_cat'].str.split('\\(Size:', expand=True)\n",
+    "temp_df['title_cat'] = temp_stock_df[0]\n",
+    "temp_df['title_cat'] = temp_df['title_cat'].str.lstrip()\n",
+    "temp_df['title_cat'] = temp_df['title_cat'].str.rstrip()\n",
+    "temp_df.drop_duplicates(subset=['title_cat'], inplace=True)\n",
+    "temp_df['title_lower'] = temp_df['title_cat'].str.lower()\n",
+    "temp_df = temp_df[['title_cat', 'title_lower', 'PRODUCT TYPE']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,22 +69,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(59185, 23)"
+       "(59185, 25)"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1 = df1.merge(temp_df, on='title', how='left')\n",
+    "df1 = df1.merge(temp_df, on='title_lower', how='left')\n",
     "df1['customs_description'] = df1['PRODUCT TYPE']\n",
     "df1.drop(['PRODUCT TYPE'], axis=1, inplace=True)\n",
     "df1.shape"
@@ -89,15 +92,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15438\n",
-      "1308\n"
+      "14192\n",
+      "1236\n"
      ]
     }
    ],
@@ -110,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -118,20 +121,20 @@
       "text/plain": [
        "customs_description\n",
        "Mens > Leather Jackets > Biker Styles      4241\n",
-       "Ladies > Leather Jackets > Biker Styles    3622\n",
-       "Ladies > Handbags                          2960\n",
-       "January Sale 2021                          2786\n",
+       "Ladies > Leather Jackets > Biker Styles    3650\n",
+       "Ladies > Handbags                          2855\n",
+       "January Sale 2021                          2749\n",
        "Ladies > Deals for HER > Handbags          2685\n",
        "                                           ... \n",
-       "Sheepskin & Fur > Ladies Fur Coats            3\n",
-       "Handbags > Saddle Bag                         2\n",
+       "Sheepskin & Fur > Ladies Fur Coats            4\n",
+       "Luggage > Ashwood Windsor Travel Range        3\n",
        "Ladies                                        2\n",
+       "Handbags > Saddle Bag                         2\n",
        "Valentine's Day 2023                          1\n",
-       "Laptop Messenger Bags                         1\n",
-       "Name: count, Length: 134, dtype: int64"
+       "Name: count, Length: 135, dtype: int64"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -154,13 +157,13 @@
     }
    ],
    "source": [
-    "df1['customs_description'] = df1['customs_description'].replace(np.NaN, 'No assigned cateogry')\n",
+    "df1['customs_description'] = df1['customs_description'].replace(np.NaN, '(No assigned cateogry)')\n",
     "print(df1['customs_description'].isnull().sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,17 +185,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title_cat</th>\n",
+       "      <th>title_lower</th>\n",
+       "      <th>PRODUCT TYPE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8614</th>\n",
+       "      <td>Ashwood Leather Crossbody Bag Navy: CB-3 (63014)</td>\n",
+       "      <td>ashwood leather crossbody bag navy: cb-3 (63014)</td>\n",
+       "      <td>Ladies &gt; Leather Handbags</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             title_cat  \\\n",
+       "8614  Ashwood Leather Crossbody Bag Navy: CB-3 (63014)   \n",
+       "\n",
+       "                                           title_lower  \\\n",
+       "8614  ashwood leather crossbody bag navy: cb-3 (63014)   \n",
+       "\n",
+       "                   PRODUCT TYPE  \n",
+       "8614  Ladies > Leather Handbags  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_df[temp_df['title_cat'] == 'Ashwood Leather Crossbody Bag Navy: CB-3 (63014)']"
+   ]
   },
   {
    "cell_type": "code",
