added debenhams data

--- a/product_category_temp.ipynb
+++ b/product_category_temp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
      "text": [
       "<>:16: SyntaxWarning: invalid escape sequence '\\('\n",
       "<>:16: SyntaxWarning: invalid escape sequence '\\('\n",
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_2860\\2291121936.py:16: SyntaxWarning: invalid escape sequence '\\('\n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_18640\\2291121936.py:16: SyntaxWarning: invalid escape sequence '\\('\n",
       "  temp_stock_df = temp_df['title_cat'].str.split('\\(Size:', expand=True)\n"
      ]
     },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "(59185, 25)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,15 +92,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14192\n",
-      "1236\n"
+      "14431\n",
+      "1246\n"
      ]
     }
    ],
@@ -113,28 +113,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "customs_description\n",
-       "Mens > Leather Jackets > Biker Styles      4241\n",
-       "Ladies > Leather Jackets > Biker Styles    3650\n",
+       "Mens > Leather Jackets > Biker Styles      4239\n",
+       "Ladies > Leather Jackets > Biker Styles    3486\n",
        "Ladies > Handbags                          2855\n",
-       "January Sale 2021                          2749\n",
+       "January Sale 2021                          2773\n",
        "Ladies > Deals for HER > Handbags          2685\n",
        "                                           ... \n",
-       "Sheepskin & Fur > Ladies Fur Coats            4\n",
        "Luggage > Ashwood Windsor Travel Range        3\n",
        "Ladies                                        2\n",
        "Handbags > Saddle Bag                         2\n",
+       "Valetine's Deals 2024                         2\n",
        "Valentine's Day 2023                          1\n",
        "Name: count, Length: 135, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -157,13 +157,13 @@
     }
    ],
    "source": [
-    "df1['customs_description'] = df1['customs_description'].replace(np.NaN, '(No assigned cateogry)')\n",
+    "df1['customs_description'] = df1['customs_description'].replace(np.NaN, '(No assigned category)')\n",
     "print(df1['customs_description'].isnull().sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8614</th>\n",
+       "      <th>8476</th>\n",
        "      <td>Ashwood Leather Crossbody Bag Navy: CB-3 (63014)</td>\n",
        "      <td>ashwood leather crossbody bag navy: cb-3 (63014)</td>\n",
        "      <td>Ladies &gt; Leather Handbags</td>\n",
@@ -227,16 +227,16 @@
       ],
       "text/plain": [
        "                                             title_cat  \\\n",
-       "8614  Ashwood Leather Crossbody Bag Navy: CB-3 (63014)   \n",
+       "8476  Ashwood Leather Crossbody Bag Navy: CB-3 (63014)   \n",
        "\n",
        "                                           title_lower  \\\n",
-       "8614  ashwood leather crossbody bag navy: cb-3 (63014)   \n",
+       "8476  ashwood leather crossbody bag navy: cb-3 (63014)   \n",
        "\n",
        "                   PRODUCT TYPE  \n",
-       "8614  Ladies > Leather Handbags  "
+       "8476  Ladies > Leather Handbags  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "(59185, 22)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "((56557, 22), (2628, 22), 2628)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "59185"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
      "text": [
       "<>:9: SyntaxWarning: invalid escape sequence '\\('\n",
       "<>:9: SyntaxWarning: invalid escape sequence '\\('\n",
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_9244\\526015662.py:9: SyntaxWarning: invalid escape sequence '\\('\n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_18640\\526015662.py:9: SyntaxWarning: invalid escape sequence '\\('\n",
       "  temp_stock_df = temp_df['title'].str.split('\\(|\\)', expand=True).iloc[:,[0,1]]\n"
      ]
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "(2628, 22)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "(59185, 22)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,14 +419,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1308\n"
+      "1318\n"
      ]
     }
    ],
@@ -436,12 +436,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1.to_csv('2024_feb_unduplicated_orders fixed_categories.csv')"
+    "df1.to_csv('2024_feb_unduplicated_orders fixed_categories.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
