--- a/product_category_temp.ipynb
+++ b/product_category_temp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
      "text": [
       "<>:16: SyntaxWarning: invalid escape sequence '\\('\n",
       "<>:16: SyntaxWarning: invalid escape sequence '\\('\n",
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_18640\\2291121936.py:16: SyntaxWarning: invalid escape sequence '\\('\n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_23264\\95657552.py:16: SyntaxWarning: invalid escape sequence '\\('\n",
       "  temp_stock_df = temp_df['title_cat'].str.split('\\(Size:', expand=True)\n"
      ]
     },
@@ -29,12 +29,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(59185, 23)\n"
+      "(60402, 23)\n"
      ]
     }
    ],
    "source": [
-    "df1 = pd.read_csv('2024_feb_unduplicated_orders.csv')\n",
+    "df1 = pd.read_csv('2024_apr9_orders.csv')\n",
     "df1['title'] = df1['title'].str.lstrip()\n",
     "df1['title'] = df1['title'].str.rstrip()\n",
     "df1['title_lower'] = df1['title'].str.lower()\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,16 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(59185, 25)"
+       "(60402, 25)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14431\n",
+      "14439\n",
       "1246\n"
      ]
     }
@@ -113,28 +113,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "customs_description\n",
-       "Mens > Leather Jackets > Biker Styles      4239\n",
-       "Ladies > Leather Jackets > Biker Styles    3486\n",
-       "Ladies > Handbags                          2855\n",
-       "January Sale 2021                          2773\n",
-       "Ladies > Deals for HER > Handbags          2685\n",
-       "                                           ... \n",
-       "Luggage > Ashwood Windsor Travel Range        3\n",
-       "Ladies                                        2\n",
-       "Handbags > Saddle Bag                         2\n",
-       "Valetine's Deals 2024                         2\n",
-       "Valentine's Day 2023                          1\n",
-       "Name: count, Length: 135, dtype: int64"
+       "Mens > Leather Jackets > Biker Styles       4350\n",
+       "Ladies > Leather Jackets > Biker Styles     3636\n",
+       "Ladies > Handbags                           2855\n",
+       "January Sale 2021                           2775\n",
+       "Ladies > Deals for HER > Handbags           2739\n",
+       "                                            ... \n",
+       "Ladies                                         2\n",
+       "Valetine's Deals 2024                          2\n",
+       "Handbags > Saddle Bag                          2\n",
+       "Valentine's Day 2023                           1\n",
+       "Home & Living > Leather Magazine Baskets       1\n",
+       "Name: count, Length: 136, dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,16 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1.to_csv('2024_feb_unduplicated_orders fixed_categories.csv')"
+    "df1.to_csv('2024_apr9_orders fixed_categories.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "8476  Ladies > Leather Handbags  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,22 +254,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(59185, 22)"
+       "(60402, 22)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1 = pd.read_csv('2024_feb_unduplicated_orders.csv')\n",
+    "df1 = pd.read_csv('2024_apr9_orders.csv')\n",
     "df1['title'] = df1['title'].str.lstrip()\n",
     "df1['title'] = df1['title'].str.rstrip()\n",
     "df1.shape"
@@ -277,16 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((56557, 22), (2628, 22), 2628)"
+       "((57565, 22), (2837, 22), 2837)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "59185"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
      "text": [
       "<>:9: SyntaxWarning: invalid escape sequence '\\('\n",
       "<>:9: SyntaxWarning: invalid escape sequence '\\('\n",
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_18640\\526015662.py:9: SyntaxWarning: invalid escape sequence '\\('\n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_23264\\526015662.py:9: SyntaxWarning: invalid escape sequence '\\('\n",
       "  temp_stock_df = temp_df['title'].str.split('\\(|\\)', expand=True).iloc[:,[0,1]]\n"
      ]
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,16 +361,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2628, 22)"
+       "(2837, 22)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,16 +384,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(59185, 22)"
+       "(60402, 22)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,14 +419,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1318\n"
+      "1342\n"
      ]
     }
    ],
@@ -436,11 +436,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1.to_csv('2024_feb_unduplicated_orders fixed_categories.csv', index=False)"
+    "df1.to_csv('2024_apr9_orders fixed_categories.csv', index=False)"
    ]
   },
   {
