Debenhams data till April 10

--- a/ashwood.ipynb
+++ b/ashwood.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_10752\\2749489232.py:1: DtypeWarning: Columns (12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_10752\\3215136129.py:1: DtypeWarning: Columns (12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('jatin.csv', sep=';')\n",
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_10752\\2749489232.py:11: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_10752\\3215136129.py:11: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  df['date'] = pd.to_datetime(df['date'])\n"
      ]
     }
@@ -41,7 +41,8 @@
     "df['date'] = df['date'].dt.date\n",
     "df['Channel'] = 'Debenhams'\n",
     "\n",
-    "\n",
+    "df['Status'] = df['Status'].replace('Shipped', 'Order Dispatched')\n",
+    "df['Status'] = df['Status'].replace('Shipped', 'Order Dispatched')\n",
     "df['Status'] = df['Status'].replace('Received', 'Order Dispatched')\n",
     "df['Status'] = df['Status'].replace('Closed', 'Order Dispatched')\n",
     "df['Status'] = df['Status'].replace('Refunded', 'Order Refunded')\n",
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,23 +154,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "title:  1412\n",
-      "line:  6859\n",
-      "model:  1412\n",
-      "manufacturer_name:  6859\n",
-      "attribute_summary:  1412\n",
-      "colour:  7006\n",
-      "F_Cat:  7029\n",
-      "S_Cat:  7034\n",
-      "T_Cat:  20452\n",
-      "Category:  7034\n"
+      "title:  1435\n",
+      "line:  7332\n",
+      "model:  1435\n",
+      "manufacturer_name:  7332\n",
+      "attribute_summary:  1435\n",
+      "colour:  7482\n",
+      "F_Cat:  7508\n",
+      "S_Cat:  7513\n",
+      "T_Cat:  21539\n",
+      "Category:  7513\n"
      ]
     }
    ],
@@ -180,16 +181,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(20648, 79)"
+       "(21756, 80)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,16 +201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((2925, 79), (17723, 79))"
+       "((3083, 80), (18673, 80))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -306,18 +307,18 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 79 columns</p>\n",
+       "<p>0 rows × 80 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [Date created, Order number, Quantity, Details, Status, Amount, Currency, Shipping method, Customer debit date, Payment workflow, Shop SKU, Reason, Offer SKU, Brand, Offer state, Order line no., Unit price, Shipping price, Shipping total amount, Total order amount incl. VAT (including shipping charges), Commission (excluding taxes), Commission value (including taxes), Amount transferred to shop (including taxes), Price additional information, Commission tax rate, Acceptance date, Shipping deadline, Shipping date, Received date, Shipping company, Tracking number, Tracking URL, Shipping address civility, Shipping address email, Shipping address first name, Shipping address last name, Shipping address company, Shipping address street 1, Shipping address street 2, Shipping Address Postcode, Shipping address city, Shipping Address County, Shipping address country, Shipping address phone, Shipping address phone 2, Shipping address additional information, Shipping address internal additional information, Billing address civility, Billing address first name, Billing address last name, Billing address company, Billing address street 1, Billing address street 2, Billing Address Postcode, Billing address city, Billing Address County, Billing address country, Billing address phone, Billing address phone 2, Payment method, Lead time to ship, PickUp DropOff point id, Customer order reference, Shop order reference, Fulfillment center code, date, time, Channel, title, line, model, manufacturer_name, attribute_summary, colour, F_Cat, S_Cat, T_Cat, Category, customs_description]\n",
+       "Columns: [Date created, Order number, Quantity, Details, Status, Amount, Currency, Shipping method, Customer debit date, Payment workflow, Shop SKU, Reason, Offer SKU, Brand, Offer state, Order line no., Unit price, Shipping price, Shipping total amount, Order fees total amount, Total order amount incl. VAT (including shipping charges), Commission (excluding taxes), Commission value (including taxes), Amount transferred to shop (including taxes), Price additional information, Commission tax rate, Acceptance date, Shipping deadline, Shipping date, Received date, Shipping company, Tracking number, Tracking URL, Shipping address civility, Shipping address email, Shipping address first name, Shipping address last name, Shipping address company, Shipping address street 1, Shipping address street 2, Shipping Address Postcode, Shipping address city, Shipping Address County, Shipping address country, Shipping address phone, Shipping address phone 2, Shipping address additional information, Shipping address internal additional information, Billing address civility, Billing address first name, Billing address last name, Billing address company, Billing address street 1, Billing address street 2, Billing Address Postcode, Billing address city, Billing Address County, Billing address country, Billing address phone, Billing address phone 2, Payment method, Lead time to ship, PickUp DropOff point id, Customer order reference, Shop order reference, Fulfillment center code, date, time, Channel, title, line, model, manufacturer_name, attribute_summary, colour, F_Cat, S_Cat, T_Cat, Category, customs_description]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 79 columns]"
+       "[0 rows x 80 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +342,7 @@
        "       'Amount', 'Currency', 'Shipping method', 'Customer debit date',\n",
        "       'Payment workflow', 'Shop SKU', 'Reason', 'Offer SKU', 'Brand',\n",
        "       'Offer state', 'Order line no.', 'Unit price', 'Shipping price',\n",
-       "       'Shipping total amount',\n",
+       "       'Shipping total amount', 'Order fees total amount',\n",
        "       'Total order amount incl. VAT (including shipping charges)',\n",
        "       'Commission (excluding taxes)', 'Commission value (including taxes)',\n",
        "       'Amount transferred to shop (including taxes)',\n",
@@ -370,7 +371,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -431,18 +432,18 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 79 columns</p>\n",
+       "<p>0 rows × 80 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [Date created, Order number, Quantity, Details, Status, Amount, Currency, Shipping method, Customer debit date, Payment workflow, Shop SKU, Reason, Offer SKU, Brand, Offer state, Order line no., Unit price, Shipping price, Shipping total amount, Total order amount incl. VAT (including shipping charges), Commission (excluding taxes), Commission value (including taxes), Amount transferred to shop (including taxes), Price additional information, Commission tax rate, Acceptance date, Shipping deadline, Shipping date, Received date, Shipping company, Tracking number, Tracking URL, Shipping address civility, Shipping address email, Shipping address first name, Shipping address last name, Shipping address company, Shipping address street 1, Shipping address street 2, Shipping Address Postcode, Shipping address city, Shipping Address County, Shipping address country, Shipping address phone, Shipping address phone 2, Shipping address additional information, Shipping address internal additional information, Billing address civility, Billing address first name, Billing address last name, Billing address company, Billing address street 1, Billing address street 2, Billing Address Postcode, Billing address city, Billing Address County, Billing address country, Billing address phone, Billing address phone 2, Payment method, Lead time to ship, PickUp DropOff point id, Customer order reference, Shop order reference, Fulfillment center code, date, time, Channel, title, line, model, manufacturer_name, attribute_summary, colour, F_Cat, S_Cat, T_Cat, Category, customs_description]\n",
+       "Columns: [Date created, Order number, Quantity, Details, Status, Amount, Currency, Shipping method, Customer debit date, Payment workflow, Shop SKU, Reason, Offer SKU, Brand, Offer state, Order line no., Unit price, Shipping price, Shipping total amount, Order fees total amount, Total order amount incl. VAT (including shipping charges), Commission (excluding taxes), Commission value (including taxes), Amount transferred to shop (including taxes), Price additional information, Commission tax rate, Acceptance date, Shipping deadline, Shipping date, Received date, Shipping company, Tracking number, Tracking URL, Shipping address civility, Shipping address email, Shipping address first name, Shipping address last name, Shipping address company, Shipping address street 1, Shipping address street 2, Shipping Address Postcode, Shipping address city, Shipping Address County, Shipping address country, Shipping address phone, Shipping address phone 2, Shipping address additional information, Shipping address internal additional information, Billing address civility, Billing address first name, Billing address last name, Billing address company, Billing address street 1, Billing address street 2, Billing Address Postcode, Billing address city, Billing Address County, Billing address country, Billing address phone, Billing address phone 2, Payment method, Lead time to ship, PickUp DropOff point id, Customer order reference, Shop order reference, Fulfillment center code, date, time, Channel, title, line, model, manufacturer_name, attribute_summary, colour, F_Cat, S_Cat, T_Cat, Category, customs_description]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 79 columns]"
+       "[0 rows x 80 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -518,24 +519,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "title:  1412\n",
-      "line:  6859\n",
-      "model:  1412\n",
-      "manufacturer_name:  6859\n",
-      "attribute_summary:  1412\n",
-      "colour:  7006\n",
-      "F_Cat:  1412\n",
-      "S_Cat:  2006\n",
-      "T_Cat:  20370\n",
-      "Category:  2006\n",
-      "customs_description:  1412\n"
+      "title:  1435\n",
+      "line:  7332\n",
+      "model:  1435\n",
+      "manufacturer_name:  7332\n",
+      "attribute_summary:  1435\n",
+      "colour:  7482\n",
+      "F_Cat:  1435\n",
+      "S_Cat:  2044\n",
+      "T_Cat:  21387\n",
+      "Category:  2044\n",
+      "customs_description:  1435\n"
      ]
     }
    ],
@@ -561,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +571,7 @@
        "0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,20 +584,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Index(['order_date', 'order_id', 'quantity', 'order_state', 'grand_total_inc',\n",
-       "       'reference', 'price_inc', 'date', 'time', 'Channel', 'title', 'line',\n",
-       "       'model', 'manufacturer_name', 'attribute_summary', 'colour',\n",
-       "       'customs_description', 'F_Cat', 'S_Cat', 'T_Cat', 'Category'],\n",
+       "       'reference', 'price_inc', 'Order fees total amount', 'date', 'time',\n",
+       "       'Channel', 'title', 'line', 'model', 'manufacturer_name',\n",
+       "       'attribute_summary', 'colour', 'customs_description', 'F_Cat', 'S_Cat',\n",
+       "       'T_Cat', 'Category'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +805,7 @@
        "4  Ladies > Ladies Jackets & Coats  Ladies > Leather Jackets"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +826,7 @@
        "(117, 24)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
